<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="securely_sign_in_your_account">Securely Sign In Your Account</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_signin_with">Or SignIn with</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_if_new_to_lazyshop">Sign up if new to LazyShop</string>
    <string name="register_with_your_email">Register with your email</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="password_hint">Minimum 8 characters in length</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_to_the_terms_and_privacy_policy">I agree to the terms and privacy policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="helping_access_your_account">Helping Access Your Account</string>
    <string name="reset_password">Reset Password</string>
</resources>