<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!--    <data>-->
<!--        <variable-->
<!--            name="details"-->
<!--            type="psl.coviassist.loginregistration.model.ForgotPasswordDetails" />-->

<!--        <variable-->
<!--            name="vm"-->
<!--            type="psl.coviassist.loginregistration.vm.LoginRegistrationVm" />-->
<!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cd_container"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:cardCornerRadius="@dimen/dimen_5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/banner"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="@dimen/dimen_0dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/forget"
                    app:layout_constraintDimensionRatio="3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_18dp"
                    android:text="@string/helping_access_your_account"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/banner" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/Lazy_TextInputLayout"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:hint="@string/email_id"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/banner"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent=".9">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_emails"
                        style="@style/Lazy_InputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_reset_pwd"
            android:layout_height="wrap_content"
            style="@style/Lazy_Button_Primary"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:text="@string/reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cd_container"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".9"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>